fixed bad spacing on physical resume site

--- a/src/routes/resume/resume.css
+++ b/src/routes/resume/resume.css
@@ -17,7 +17,7 @@
     width: 100%;
 }
 
-.group .header {
+.group .header-of-group {
     font-size: x-large;
     font-weight: bold;
     text-align: center;
